--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="birthdayCard">
-    <div class="cardFront"><h3 class="happy">HAPPY BIRTHDAY!</h3>
+    <div class="cardFront"><h3 class="happy">HAPPY GRADUATION!</h3>
     <div class="balloons">
       <div class="balloonOne"></div>
       <div class="balloonTwo"></div>
@@ -8,8 +8,8 @@
     </div>
     </div>
       <div class="cardInside">
-        <h3 class="back">HAPPY BIRTHDAY!</h3>
-        <p>Dear Friend,</p>
+        <h3 class="back">HAPPY GRADUATION!</h3>
+        <p>Selamat sudah berhasil,</p>
         <p>Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
         <p class="name">xxx</p>
       </div>
