--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <div class="birthdayCard">
-    <div class="cardFront"><h3 class="happy">HAPPY GRADUATION!</h3>
-    <div class="balloons">
-      <div class="balloonOne"></div>
-      <div class="balloonTwo"></div>
-      <div class="balloonThree"></div>
-      <div class="balloonFour"></div>
-    </div>
-    </div>
-      <div class="cardInside">
-        <h3 class="back">HAPPY GRADUATION!</h3>
-        <p>Selamat sudah berhasil,</p>
-        <p>Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
-        <p class="name">xxx</p>
-      </div>
-    </div>
+<div class="cardFront"><h3 class="happy">HAPPY GRADUATION!</h3>
+<div class="balloons">
+  <div class="balloonOne"></div>
+  <div class="balloonTwo"></div>
+  <div class="balloonThree"></div>
+  <div class="balloonFour"></div>
+</div>
+</div>
+  <div class="cardInside">
+    <h3 class="back">HAPPY GRADUATION!</h3>
+    <p>Proud of you Sist,</p>
+    <p>Bukan tentang siapa yang paling cepat, tapi tentang siapa yang sanggup bertahan hingga tamat. Mangats Syaul !!</p>
+    <p class="name">Puri</p>
+  </div>
+</div>
