--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="birthdayCard">
-<div class="cardFront"><h3 class="happy">HAPPY GRADUATION!</h3>
+<div class="cardFront"><h3 class="happy">SELAMAT SUDAH DIDADAR!</h3>
 <div class="balloons">
   <div class="balloonOne"></div>
   <div class="balloonTwo"></div>
