--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <div class="birthdayCard">
 <div class="cardFront"><h3 class="happy">SELAMAT SUDAH DIDADAR!</h3>
 <div class="balloons">
@@ -14,3 +17,5 @@
     <p class="name">Puri</p>
   </div>
 </div>
+</body>
+</html>
