--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>TELUR DADAR!!</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+
 <body>
-<div class="birthdayCard">
-<div class="cardFront"><h3 class="happy">SELAMAT SUDAH DIDADAR!</h3>
-<div class="balloons">
-  <div class="balloonOne"></div>
-  <div class="balloonTwo"></div>
-  <div class="balloonThree"></div>
-  <div class="balloonFour"></div>
-</div>
-</div>
-  <div class="cardInside">
-    <h3 class="back">HAPPY GRADUATION!</h3>
-    <p>Proud of you Sist,</p>
-    <p>Bukan tentang siapa yang paling cepat, tapi tentang siapa yang sanggup bertahan hingga tamat. Mangats Syaul !!</p>
-    <p class="name">Puri</p>
+  <!-- partial:index.partial.html -->
+  <div class="birthdayCard">
+    <div class="cardFront">
+      <h3 class="happy">SELAMAT SUDAH DIDADAR!</h3>
+      <div class="balloons">
+        <div class="balloonOne"></div>
+        <div class="balloonTwo"></div>
+        <div class="balloonThree"></div>
+        <div class="balloonFour"></div>
+      </div>
+    </div>
+    <div class="cardInside">
+      <h3 class="back">SELAMAT TELUR DADAR!</h3>
+      <p>Bangga banget lohhh,</p>
+      <p>Ini bukan tentang siapa yang paling cepat, tapi tentang siapa yang bertahan sampai tamat. Mangat Syaul !!</p>
+    </div>
   </div>
-</div>
+  <!-- partial -->
+
 </body>
+
 </html>
